data/sandwich.7.css
@font-face{
    font-family:'Alegreya';
    font-style:normal;
    font-weight:400;
    src:local('Alegreya'),
        local('Alegreya-Regular'),
    url(//brick.a.ssl.fastly.net/fonts/alegreya/400.woff) format('woff');
}

@font-face{
    font-family:'Alegreya';
    font-style:italic;
    font-weight:400;
    src:local('Alegreya Italic'),
        local('Alegreya-Italic'),
        url(//brick.a.ssl.fastly.net/fonts/alegreya/400i.woff) format('woff');
}

@font-face{font-family:'Alegreya';
    font-style:normal;
    font-weight:700;
    src:local('Alegreya Bold'),
        local('Alegreya-Bold'),
        url(//brick.a.ssl.fastly.net/fonts/alegreya/700.woff) format('woff');
}

@font-face{font-family:'Alegreya';
    font-style:italic;
    font-weight:700;
    src:local('Alegreya Bold Italic'),
        local('Alegreya-BoldItalic'),
        url(//brick.a.ssl.fastly.net/fonts/alegreya/700i.woff) format('woff');
}

@font-face{font-family:'Source Code Pro';
    font-style:normal;
    font-weight:400;
    src:local('Source Code Pro Regular'),
        local('SourceCodePro-Regular'),
        local('Source Code Pro'),
        url(//brick.a.ssl.fastly.net/fonts/sourcecodepro/400.woff) format('woff');
}

* {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

html {
    background: #fdf6e3;
    color: #657b83;
    margin: 0;
    padding: 0;
}


body {
    margin: 0;
    padding: 0;
    font-size: 24px;
    font-family: "Alegreya", "Heuristica", "Cardo", "Crimson Text", serif;
    font-kerning: normal;
    font-variant-ligatures: common-ligatures contextual;
    min-width: 300px;
}

@media screen and (max-width: 580px){
    body { font-size: 16px; }
}

main, footer, header {
    max-width: 35em;
    max-width: 65ch;
    margin: 0 auto;
}

main {
    border: 1px solid #073642;
    /* box-shadow: 0px 0px 15px -5px #657b83; */
    position: relative;
    z-index: 10;
}

@media (max-width: 875px){
    main, footer, header {
        width: 100%!important;
        max-width: none;
    }

    main {
        border-left: none;
        border-right: none;
    }
}

h1, h2, h3, h4, h5, h6 {
    text-align: center;
    font-weight: 700;
    margin: 0.25em .25em;
    color: #586e75;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 1.75em;
}

h3 {
    font-size: 1.5em;
}

h4 {
    font-size: 1.25em;
}

h5 {
    font-size: 1em;
}

h6 {
    font-size: 0.85em;
}

:link {
    color: #268bd2;
    text-decoration: none;
}

:link:hover {
    text-decoration: underline;
}

:visited {
    color: #2aa198;
}

p {
    margin: 0 .5em;
    text-indent: 2.25em;
    line-height: 1.25em;
    text-align: justify;
}

strong, b {
    font-weight: 700;
    color: #586e75;
}

img {
    max-width: 100%;
}

figure img {
    margin: 0 auto;
    display: block;
}

figure {
    margin: .5em 0;
    padding: 0;
}

figcaption {
    padding: .05em .5em .25em;
    text-align: center;
}

figure, code, pre {
    background: #eee8d5;
    max-width: 100%;
}

pre, code {
    font-family: "Source Code Pro";
    font-size: 0.833333em;
}

pre {
    max-width: 100%;
    overflow: auto;
}

pre code {
    /* Banzai all the hacks! */
    display: table;
    padding: .5em;
}

blockquote {
    background: #eee8d5;
    color: #93a1a1;
    margin: .25em 0;
    padding: .25em 1em;
}

blockquote p {
    text-indent: 1.25em;
}

article ol, article ul {
    margin: .5em 0;
    padding: 0 .5em 0 2em;
}

article>p:last-child, article>section:last-child {
    margin-bottom: .5em;
}

article>p:first-child, article>section:first-child {
    margin-top: .5em;
}

del {
    color: #93a1a1;
}

sup, sub {
    line-height: 0.5;
}

math {
    font-size: 0.85em;
}

#metadata span {
    font-size: .85em;
    color: #93a1a1;
}

#metadata {
    text-align: center;
    margin-bottom: 1em;
}

#metadata h1 {
    margin-bottom: 0em;
}

.footnoteRef sup:before,
.footnoteRef sup::before {
    content: "[";
}

.footnoteRef sup:after,
.footnoteRef sup::after {
    content: "]"
}

.footnoteRef:hover sup {
    text-decoration: underline;
}

#footnotes {
    background: #eee8d5;
    overflow: hidden;
    margin-top: .25em;
    padding-bottom: .5em;
}

#footnotes p {
    text-indent: 0;
    display: block;
    margin-left: 2em;
}

#footnotes ol {
    padding: 0;
    margin: 0;
    list-style: none;
    counter-reset: footnote;
}

#footnotes li:target {
    background: #fdf6e3;
}

#footnotes li {
    padding: .25em .5em .25em 0;
    overflow: hidden;
}

#footnotes li::before, #footnotes li:before {
    counter-increment:footnote;
    content: counters(footnote, "") ".";
    float: left;
    width: 2em;
    text-align: center;
}


#footnotes li a:last-child {
    float: right;
    margin: 0 .15em;
}

header {
    padding: .25em 0;
    overflow: hidden;
}

header #title::before, header #title:before {
    content: "Kazlauskas";
}

header #title {
    color: #93a1a1;
    margin: 0;
    z-index: -1;
    width: 100%;
    position: relative;
    display: block;
    margin-bottom: -.125em;
    font-style: normal;
    font-size: 5em;
    line-height: 0.8em;
    text-align: center;
}

@media screen and (max-width: 640px){
    header #title {
        font-size: 3em;
    }
}

nav {
    overflow: hidden;
    width: 100%;
    background: #002b36;
    z-index: 20;
    margin-bottom: -.25em;
    position: relative;
}

nav ul {
    list-style: none;
    padding: .25em .5em;
    margin: 0;
    width: 100%;
    font-size: .85em;
    text-align: center;
}

nav li {
    display: inline-block;
    padding: 0;
}

nav li a {
    display: block;
    padding: .5em;
    text-decoration: none;
}

nav li a:hover {
    background: #073642;
    text-decoration: none!important;
}

nav li a:visited {
    color: #268bd2;
}

footer {
    padding: .5em .5em;
    overflow: hidden;
}

#generator, #copy {
    font-size: 0.85em;
}

#generator {
    float: right;
}

#generator::before, #generator:before{
    content: "Proudly";
}

#copy {
    float: left;
}

#copy::before, #copy:before {
    content: "The content in this page is licensed under";
}

@media screen and (max-width: 45em){
    #copy::before, #copy:before {
        content: "©";
    }

    #generator::before, #generator:before{
        content: "";
    }
}

/* Specific pages */
.years, .entries {
    list-style: none;
    padding: 0 .5em;
    margin: 1em 0 .5em;
}

.entries {
    padding: 0 0 0 2.5em;
    margin: 0;
}

.years>li:before {
    content: attr(data-year) "";
    font-weight: 700;
}

.entries>li:before {
    content: attr(data-moday) "";
    display: inline-block;
    min-width: 2.5em;
    text-align: center;
}

.entries time {
    display: none;
}

/* non-standard */
::-moz-selection { color: #93a1a1;  background: #002b36; }
::selection { color: #93a1a1;  background: #002b36; }
nav *::-moz-selection { background: #fdf6e3; color: #586e75; }
nav *::selection { background: #fdf6e3; color: #586e75; }

@media print {

    * {
        background: transparent !important;
    }

    main, header, footer {
        width: auto;
        max-width: none;
    }

    html, body{
        font-size: 12pt;
        color: #000;
    }

    h1, h2, h3, h4, h5, h6 {
        color: #000;
    }

    nav {
        display: none;
    }

    #generator {
        display: none;
    }

    main {
        border-top: none;
        border-left: none;
        border-right: none;
        box-shadow: none;
    }

    #title {
        color: #000;
    }

    #copy::before, #copy:before {
        content: "The content in this document is licensed under";
    }
}

